--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background-color: black;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -13,4 +14,9 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+button {
+  padding: 20px;
+  font-size: large;
 }
